<resources>
    <string name="app_name">ButtonSpinnerSampleProject</string>
    <string name="action_settings">Settings</string>
    <string name="sample_heading">Button and Spinner Sample</string>
    <string name="display_activity">Display Activity</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>

    <string-array name="planets_array">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>
    </string-array>

</resources>
